crates/scene/tests/snapshots/errors__scene_unknown-op.snap
---
source: crates/scene/tests/errors.rs
expression: render(err)
---
scene/unknown-op

  × unknown op `bad`
   ╭─[scene.kdl:1:13]
 1 │ scene "x" { bad }
   ·             ─┬─
   ·              ╰── no op registered under this name
   ╰────
  help: did you mean `focus`? Available ops: `focus`, `close`, `rename`, ...
