crates/scene/tests/snapshots/errors__scene_unknown-view.snap
---
source: crates/scene/tests/errors.rs
expression: render(err)
---
scene/unknown-view

  × unknown view `bad`
   ╭─[scene.kdl:1:13]
 1 │ scene "x" { bad }
   ·             ─┬─
   ·              ╰── no view registered under this name
   ╰────
  help: did you mean `shell`? Available views: `command`, `shell`, `edit`.
